<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity$CatagoryFragment">

    <TextView android:id="@+id/no_items_text_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/no_items_message"
    android:textColor="@color/background_material_dark"
    android:textSize="15dp"
    android:textAlignment="center"
    android:gravity="center" />

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/mainListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
