...
    <string name="title_activity_list">ListActivity</string>
    <string name="category_message">Please chose a category and try again</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="category_alert">Category not chosen!</string>
    <string name="search_hint">Search for Something!</string>
    <string name="search_title">Search</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_get_from_gallery">GetFromGalleryActivity</string>
    <string name="alert_fail">Please fill in the form and try again</string>
    <string name="miss_name">Missing Name info</string>
    <string name="miss_price">Missing Price info</string>
    <string name="miss_name_price">Missing Name, Price and Description info</string>
...
